idf_component_register(SRCS 
                            "main.c"
                            "utils/blufi_init.c"
                            "utils/blufi_security"
                            "utils/wifi_util.c"
                            "utils/nvs_util.c"

                    INCLUDE_DIRS "utils")